--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -18,7 +18,7 @@ jobs:
       - name: Download linter library
         run: python3 -m pip install wemake-python-styleguide
       - name: Run linter
-        run: python3 -m flake8
+        run: python3 -m flake8 app.py tests.py
   formatting:
     name: Check formatting
     runs-on: ubuntu-latest
