--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -1,10 +1,10 @@
 name: Tests
 
 on:
-  #push:
-  #  branches: []
-  #pull_request:
-  #  branches: [ main ]
+  push:
+    branches: []
+  pull_request:
+    branches: [ main ]
 
 jobs:
   flake8:
