--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -49,6 +49,8 @@ jobs:
         uses: actions/setup-python@v2
       - name: Download test library
         run: python3 -m pip install pytest
+      - name: Download requirements
+        run: python3 -m pip install -r requirements.txt
       - name: Run tests
         run: |
           (python3 -m flask run &) &> /dev/null
