--- a/.github/workflows/tests.yaml
+++ b/.github/workflows/tests.yaml
@@ -16,7 +16,7 @@ jobs:
       - name: Download Python
         uses: actions/setup-python@v2
       - name: Download linter library
-        run: python3 -m pip install wemake-python-styleguide
+        run: python3 -m pip install wemake-python-styleguide flake8-colors
       - name: Run linter
         run: python3 -m flake8 app.py tests.py
   formatting:
@@ -35,10 +35,10 @@ jobs:
         run: python3 -m pip install black
       - name: Check Python formatting
         run: python3 -m black . --check
-      - name: Check web formatting
-        run: |
-          npx prettier **/*.js --check
-          npx prettier **/*.css --check
+      #- name: Check web formatting
+      #  run: |
+      #    npx prettier **/*.js --check
+      #    npx prettier **/*.css --check
   tests:
     name: Run tests
     runs-on: ubuntu-latest
@@ -54,4 +54,5 @@ jobs:
       - name: Run tests
         run: |
           (python3 -m flask run &) &> /dev/null
+          delay 1
           python3 -m pytest tests.py
