--- a/assets/home.yaml
+++ b/assets/home.yaml
@@ -1,14 +1,10 @@
 title: Home | Tunt
 content: |
-  <div class="center">
-    <h1 class="big">Tunt</h1>
-    <br>
-    <h3 class="big">Let's start playing. Choose one.</h3>
-    <br>
-    <div class="center">
-      <button id="newGame">Setup a game</button>
-      <button id="playGame">Play a game</button>
-    </div>
+  <h1 class="big">Tunt</h1>
+  <h3 class="big">Let's start playing. Choose one.</h3>
+  <div>
+    <button id="newGame">Setup a game</button>
+    <button id="playGame">Play a game</button>
   </div>
   <audio autoplay loop controls>
     <source src="/asset/general_files/stairway-by-patrick-patrikios.mp3">
