Implement a bit of audio control

--- a/assets/home.yaml
+++ b/assets/home.yaml
@@ -1,14 +1,25 @@
 title: Home | Tunt
 content: |
-  <h1 class="big">Tunt</h1>
-  <h3 class="big">Let's start playing. Choose one.</h3>
-  <div>
-    <button id="newGame">Setup a game</button>
-    <button id="playGame">Play a game</button>
-  </div>
+  <main>
+    <h1 class="big">Tunt</h1>
+    <h3 class="big">Let's start playing. Choose one.</h3>
+    <div>
+      <button id="newGame">Setup a game</button>
+      <button id="playGame">Play a game</button>
+    </div>
+  </main>
   <audio autoplay loop controls>
     <source src="/asset/general_files/stairway-by-patrick-patrikios.mp3">
   </audio>
+  <div class="audioControls">
+    Music
+    <span class="material-icons" id="music_controls">more_vert</span>
+  </div>
+  <div class="audioControlMenu">
+    <button id="toggleMusic">Pause music</button>
+    Always <span id="audioPreference">play</span> music
+    <button id="toggleMusicPreference">Toggle preference</button>
+  </div>
 scripts:
   - home.js
 styles:
