--- a/assets/404.yaml
+++ b/assets/404.yaml
@@ -7,7 +7,7 @@ content: |
   <h3>404. Maybe try checking that you spelled everything correctly.</h3>
   <button id="goHome">Go to the home page</button>
 scripts:
-  - error.js
+  - errorButtons.js
 styles:
   - general.css
   - 404.css
